--- a/1_NN_regression.ipynb
+++ b/1_NN_regression.ipynb
@@ -8760,13 +8760,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "JIgd4KXLU7kc"
       },
       "outputs": [],
       "source": [
-        "data ="
+        "data = 123"
       ]
     },
     {
@@ -8792,7 +8792,7 @@
       ],
       "provenance": [],
       "mount_file_id": "1_4MnjNXPd2w6iWCrbCGX6O6LlLKmIE62",
-      "authorship_tag": "ABX9TyP254X8uTdk8AMAxxgm8JTd",
+      "authorship_tag": "ABX9TyMMo4RIgj/jBIb/7hwfxoLl",
       "include_colab_link": true
     },
     "kernelspec": {
